--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: 17
       
       - name: Install dependencies
         run: npm ci
@@ -25,7 +25,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1.0.1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
@@ -36,9 +36,9 @@ jobs:
         id: upload-release-asset
         uses: actions/upload-release-asset@v1.0.2
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/My-Electron-App.dmg
-          asset_name: My-Electron-App.dmg
+          asset_path: ./dist/chatgpt-solo.dmg
+          asset_name: chatgpt-solo.dmg
           asset_content_type: application/x-diskcopy
